--- a/src/assets/style/Header.css
+++ b/src/assets/style/Header.css
@@ -1,7 +1,13 @@
+*,
+*::before,
+*::after {
+    box-sizing: border-box;
+}
+
 body {
     margin: 0;
+    padding-top: 70px; /* Espacio para el header fijo */
     font-family: Arial, sans-serif;
-    margin-top: 120px;
 }
 
 .header {
@@ -17,7 +23,6 @@ body {
     height: 80px;
     z-index: 1000;
     transition: top 0.3s ease;
-    
 }
 
 .header * {
