--- a/src/assets/style/Home.css
+++ b/src/assets/style/Home.css
@@ -2,7 +2,6 @@
 body {
     font-family: 'Montserrat', sans-serif;
     padding: 0;
-    
 }
 
 /* Hero Section */
@@ -14,7 +13,7 @@ body {
 
 .hero img {
     width: 100%;
-    height: 100%;
+    height: auto; /* Ajuste para mantener la proporción de la imagen */
     display: block;
     object-fit: cover;
 }
@@ -37,6 +36,7 @@ body {
     justify-content: space-evenly;
     gap: 20px;
     margin-top: 20px;
+    flex-wrap: wrap; /* Permite que los elementos se envuelvan en pantallas más pequeñas */
 }
 
 .info-cards {
@@ -52,11 +52,9 @@ body {
     margin: 10px;
     padding: 10px;
     background-color: #f9f9f9;
-    /* Fondo de tarjeta */
     border-radius: 5px;
-    /* Bordes redondeados */
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-    /* Sombra sutil */
+    flex-wrap: wrap; /* Permite que los elementos se envuelvan */
 }
 
 .info-card i {
@@ -202,6 +200,24 @@ body {
     }
 }
 
+@media (max-width: 768px) {
+    .hero {
+        margin-top: 5%;
+    }
+
+    .hero img {
+        height: auto; /* Asegura que la imagen ajuste su altura en pantallas más pequeñas */
+    }
+
+    .about-content {
+        flex-direction: column;
+    }
+
+    .info-card {
+        margin: 10px 0;
+    }
+}
+
 @media (max-width: 480px) {
     .hero img {
         height: auto;
@@ -213,5 +229,13 @@ body {
 
     .specialty img {
         height: 150px;
+    }
+
+    .info-card i {
+        font-size: 40px; /* Ajusta el tamaño del icono en pantallas más pequeñas */
+    }
+
+    .info-card p {
+        font-size: 0.875rem; /* Ajusta el tamaño del texto */
     }
 }
