--- a/src/style/Categorias.css
+++ b/src/style/Categorias.css
@@ -33,7 +33,7 @@
     border-radius: 8px;
     overflow: hidden;
     height: 300px; 
-    text-decoration: none; /* Evita subrayado en el enlace */
+    text-decoration: none; 
     transition: transform 0.3s ease, box-shadow 0.3s ease;
 }
 
@@ -64,13 +64,12 @@
     font-weight: 600;
 }
 
-/* Efecto hover */
+
 .category:hover {
-    transform: translateY(-10px); /* Eleva ligeramente la categoría */
-    box-shadow: 0 10px 20px rgba(0, 0, 0, 0.2); /* Añade sombra al pasar el mouse */
+    transform: translateY(-10px); 
+    box-shadow: 0 10px 20px rgba(0, 0, 0, 0.2); 
 }
 
-/* Ajustes para pantallas más pequeñas */
 @media (max-width: 768px) {
     .category {
         flex: 1 1 calc(50% - 20px); 
