--- a/src/style/Home.css
+++ b/src/style/Home.css
@@ -13,8 +13,7 @@ body {
 
 .hero img {
     width: 100%;
-    height: auto; /* Ajuste para mantener la proporción de la imagen */
-    display: block;
+    height: auto; 
     object-fit: cover;
 }
 
@@ -36,7 +35,7 @@ body {
     justify-content: space-evenly;
     gap: 20px;
     margin-top: 20px;
-    flex-wrap: wrap; /* Permite que los elementos se envuelvan en pantallas más pequeñas */
+    flex-wrap: wrap; 
 }
 
 .info-cards {
@@ -54,7 +53,7 @@ body {
     background-color: #f9f9f9;
     border-radius: 5px;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-    flex-wrap: wrap; /* Permite que los elementos se envuelvan */
+    flex-wrap: wrap; 
 }
 
 .info-card i {
@@ -206,7 +205,7 @@ body {
     }
 
     .hero img {
-        height: auto; /* Asegura que la imagen ajuste su altura en pantallas más pequeñas */
+        height: auto; 
     }
 
     .about-content {
@@ -232,10 +231,10 @@ body {
     }
 
     .info-card i {
-        font-size: 40px; /* Ajusta el tamaño del icono en pantallas más pequeñas */
+        font-size: 40px; 
     }
 
     .info-card p {
-        font-size: 0.875rem; /* Ajusta el tamaño del texto */
+        font-size: 0.875rem; 
     }
 }
