--- a/src/style/Login.css
+++ b/src/style/Login.css
@@ -22,7 +22,7 @@ body {
     background-color: #ffffff;
     padding: 20px;
     border-radius: 8px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    box-shadow: 0 0 10px rgba(223, 220, 220, 0.925);
     width: 100%;
     max-width: 400px;
 }
@@ -30,7 +30,7 @@ body {
 .login-form h1 {
     font-size: 24px;
     margin-bottom: 20px;
-    color: #333;
+    color: #030000;
     text-align: center;
 }
 
@@ -56,7 +56,7 @@ body {
 .submit-button {
     width: 100%;
     padding: 10px;
-    background-color: #ff5722; /* Color de botón temático */
+    background-color: #ff5722; 
     color: white;
     border: none;
     border-radius: 4px;
