--- a/src/style/Login.css
+++ b/src/style/Login.css
@@ -52,21 +52,26 @@ body {
     border: 1px solid #ddd;
     border-radius: 4px;
 }
+.container {
+    display: flex;
+    gap: 10px; /* Ajusta el espacio entre los botones si es necesario */
+}
 
 .submit-button {
-    width: 100%;
-    padding: 10px;
-    background-color: #ff5722; 
-    color: white;
+    padding: 10px 20px; /* Ajusta el tamaño del botón si es necesario */
     border: none;
-    border-radius: 4px;
-    font-size: 16px;
+    border-radius: 5px;
+    background-color: #fa892d;
+    color: white;
     cursor: pointer;
+    font-size: 16px;
+    transition: background-color 0.3s;
 }
 
 .submit-button:hover {
-    background-color: #e64a19;
+    background-color: #ff7300; /* Cambia el color de fondo al pasar el ratón */
 }
+
 
 .error-message {
     color: #f44336;
