--- a/src/style/Dashboard.css
+++ b/src/style/Dashboard.css
@@ -1,4 +1,3 @@
-/* Contenedor principal */
 .dashboard-container {
   display: flex;
   height: 100vh; /* Asegura que el contenedor ocupe toda la altura de la ventana */
@@ -8,7 +7,7 @@
 /* Estilo para la barra lateral */
 .sidebar {
   flex-shrink: 0;
-  width: 170px;
+  width: 18 0px;
   height: 100vh; /* Asegura que la barra lateral tenga la altura completa de la ventana */
   transition: width 0.3s ease;
   overflow-y: auto; /* Agrega desplazamiento solo en la barra lateral si es necesario */
@@ -89,6 +88,46 @@
   overflow-y: auto; /* Permitir desplazamiento solo en el contenido principal */
   height: 100vh; /* Asegura que el contenido ocupe toda la altura de la ventana */
   box-sizing: border-box; /* Asegura que el padding no afecte el cálculo de la altura */
+}
+
+/* Sección de bienvenida */
+.welcome-section {
+  text-align: center;
+  margin-bottom: 20px;
+  padding: 20px;
+  border-radius: 8px;
+  background-color: #ffffff;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+}
+
+.logo-container {
+  margin-bottom: 20px;
+}
+
+.logo {
+  max-width: 150px; /* Ajusta el tamaño del logo según sea necesario */
+  height: auto;
+}
+
+.welcome-section h1 {
+  margin-top: 0;
+  color: #343a40;
+}
+
+.company-info {
+  padding: 20px;
+  border-radius: 8px;
+  background-color: #ffffff;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+}
+
+.company-info h2 {
+  margin-top: 0;
+  color: #343a40;
+}
+
+.company-info p {
+  margin: 5px 0;
 }
 
 /* Responsividad */
